# cps-virtualization

./: LICENSE  README.md
app_rte/: human.py  main.py  physical_actuators.py  physical_sensors.py  rte.py  simulation.py  utils.py  virtual_actuators.py  virtual_sensors.py
physical_world/: Cargo.toml
physical_world/csv/: README.md
physical_world/img/: README.md
physical_world/src/: lib.rs
physical_world/src/physics/: entity.rs  mod.rs  system.rs
physical_world/src/physics/interaction/: contact_forces.rs  elastic_collision.rs  gravity.rs  helpers.rs  interaction.rs  mod.rs
physical_world/src/physics/state/: mod.rs  shape.rs  state.rs  state_influence.rs
physical_world/src/utils/: identity.rs  mod.rs  round.rs
physical_world/tests/: force_propagation_1.rs  force_propagation_2.rs  force_propagation_3.rs  force_propagation_4.rs  gravity.rs  multi_body_collisions.rs  multi_gravity.rs  newton_pendulum_1.rs  newton_pendulum_2.rs  newton_pendulum_3.rs  newton_pendulum_4.rs  simultaneous_collisions.rs  simultaneous_collisions_different_masses.rs  wall_collisions.rs
physical_world/tests/common/: interactions.rs  logging.rs  mod.rs  plotter.rs  simulation.rs
