[package]
name = "physical_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dimensioned = "0.8.0"
itertools = "0.13.0"
plotters = "0.3.3"
log = "0.4.22"
log4rs = "1.3.0"
vector3d = "0.2.1"
csv = "1.3.0"